[gd_scene load_steps=2 format=3 uid="uid://b2whtobxgnksr"]

[ext_resource type="Script" uid="uid://bfk4s8asp4x7n" path="res://content/ui/main_menu/main_menu.gd" id="1_utroe"]

[node name="MainMenu" type="CanvasLayer"]
script = ExtResource("1_utroe")

[node name="BGColor" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0117647, 0.0705882, 0.145098, 1)

[node name="TitleLabel" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -200.0
offset_top = 50.0
offset_right = 200.0
offset_bottom = 150.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 48
text = "Esc-Treatment"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ButtonsBox" type="VBoxContainer" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -167.0
offset_top = -358.0
offset_right = 39.001
offset_bottom = -157.999
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(1.545, 1.545)

[node name="PlayButton" type="Button" parent="ButtonsBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.695634, 1, 0.856437, 1)
text = "Play"

[node name="QuitButton" type="Button" parent="ButtonsBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.999999, 0.820292, 0.802184, 1)
text = "Quit"

[connection signal="pressed" from="ButtonsBox/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="ButtonsBox/QuitButton" to="." method="_on_quit_button_pressed"]
